--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Desenvolvedora Web, Desenvolvedora Front End, Desenvolvedora Back End, Desenvolvedora Full Stack</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="" class="btn btn-outline-light mr-5">Download CV</a>
+                        <a href="https://drive.google.com/file/d/1KsxioC_S1i-QCeAa8fuyW7vs1J2LA2Oa/view?usp=sharing" class="btn btn-outline-light mr-5">Download CV</a>
                         
                     </div>
                 </div>
@@ -107,7 +107,7 @@
                         <div class="col-sm-6 py-2"><h6>Nome: <span class="text-secondary">Emelly Freitas</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Aniversário: <span class="text-secondary">16 de Maio de 2001</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Grau: <span class="text-secondary">Superior em Andamento</span></h6></div>
-                        <div class="col-sm-6 py-2"><h6>Experiência: <span class="text-secondary">3 Anos</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>Experiência: <span class="text-secondary">5 Anos</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Telefone: <span class="text-secondary">(85) 98660-9957</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">emellysilva1000@gmail.com</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Endereço: <span class="text-secondary">Rua Santo Antônio da Paupina, Fortaleza, Ceará</span></h6></div>
@@ -130,19 +130,19 @@
                 <div class="col-lg-6">
                     <h3 class="mb-4">Educação</h3>
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
-                        <div class="position-relative mb-4">
+                        <div class="mb-4" style="min-height: 150px;">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Análise e Desenvolvimento de Sistemas</h5>
                             <p class="mb-2"><strong>UNIFOR</strong> | <small>2023 - 2025</small></p>
                             <p>Curso de Análise e Desenvolvimento de Sistemas, em andamento, com ênfase na compreensão aprofundada do ciclo de vida do desenvolvimento de software e habilidades práticas em linguagens de programação e arquitetura de sistemas.</p>
                         </div>
-                        <div class="position-relative mb-4">
+                        <div class="position-relative mb-4" style="min-height: 100px;">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Técnico em Informática</h5>
                             <p class="mb-2"><strong>EEEP JOSÉ DE BARCELOS</strong> | <small>2016 - 2018</small></p>
                             <p>Formação sólida em sistemas e tecnologias da informação, com habilidades em programação, redes e suporte técnico.</p>
                         </div>
-                        <div class="position-relative mb-4">
+                        <div class="position-relative mb-4" style="min-height: 240px;">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Ensino Médio Profissionalizante</h5>
                             <p class="mb-2"><strong>EEEP JOSÉ DE BARCELOS</strong> | <small>2016 - 2018</small></p>
@@ -339,11 +339,11 @@
                 <div class="col-lg-4 mb-5" >
                     <div class="card position-relative mb-4 card-tam" style="width: 22rem;">
                         <div class="card card-tam" style="width: 22rem;">
-                            <img class="card-img-top" src="img/blog-1.jpg" alt="Imagem de capa do card">
+                            <img class="card-img-top" src="img/bicco.jpg" alt="Imagem de capa do card">
                             <div class="card-body">
                                 <h5 class="card-title">Sistema de "Bicco"</h5>
                                 <p class="card-text">Sistema que conecta prestadores de serviço a contratantes em busca de serviços temporários. Desenvolvido com Node.js, HTML, CSS, Bootstrap e JavaScript, oferece uma plataforma intuitiva e responsiva para uma experiência agradável.</p>
-                                <a href="#" class="btn btn-sm btn-outline-primary py-2  btn-position mb-3">Visitar</a>
+                                <a href="https://github.com/emy333/bicco" class="btn btn-sm btn-outline-primary py-2  btn-position mb-3">Visitar</a>
                             </div>
                         </div>
                     </div>
@@ -373,7 +373,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 mb-5 ">
+                <!--<div class="col-lg-4 col-md-6 mb-5 ">
                     <div class="card position-relative mb-4" style="width: 22rem;">
                         <div class="card card-tam " style="width: 22rem;">
                             <img class="card-img-top" src="img/blog-2.jpg" alt="Imagem de capa do card">
@@ -384,7 +384,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
             </div>
          
         </div>
