--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
                 <div class="col-lg-4 mb-5" >
                     <div class="card position-relative mb-4 card-tam" style="width: 22rem;">
                         <div class="card card-tam" style="width: 22rem;">
-                            <img class="card-img-top" src="img/bicco.jpg" alt="Imagem de capa do card">
+                            <img class="card-img-top" src="img/bicco.JPG" alt="Imagem de capa do card">
                             <div class="card-body">
                                 <h5 class="card-title">Sistema de "Bicco"</h5>
                                 <p class="card-text">Sistema que conecta prestadores de serviço a contratantes em busca de serviços temporários. Desenvolvido com Node.js, HTML, CSS, Bootstrap e JavaScript, oferece uma plataforma intuitiva e responsiva para uma experiência agradável.</p>
