--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                             <img class="card-img-top" src="img/blog-2.jpg" alt="Imagem de capa do card">
                             <div class="card-body">
                                 <h5 class="card-title">Loja Virtual</h5>
-                                <p class="card-text">Desenvolvido um site de ecommerce em HTML, CSS e JS, com funcionalidades de adicionar itens ao carrinho, excluir e calcular o valor total da compra no final. Proporcionando uma experiência completa de compra online.</p>
+                                <p class="card-text">Desenvolvi um site de ecommerce em HTML, CSS e JS, com funcionalidades de adicionar itens ao carrinho, excluir e calcular o valor total da compra no final. Proporcionando uma experiência completa de compra online.</p>
                                 <a href="https://github.com/emy333/irmas-castro" class="btn btn-sm btn-outline-primary py-2 btn-position mb-3">Visitar</a>
                             </div>
                         </div>
