--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
                     <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">Desenvolvedora Web - Full Stack</h3>
-                    <p>Desenvolvedora Web Full Stack com formação em Técnico em Informática e atualmente cursando Análise e Desenvolvimento de Sistemas. Experiência sólida em desenvolvimento front-end e back-end, com habilidades em linguagens de programação como HTML, CSS, JavaScript, Python e banco de dados SQL. Foco em criar soluções eficientes e inovadoras.</p>
+                    <h3 class="mb-4">Analista e Desenvolvedora de sistemas</h3>
+                    <p>Desenvolvedora Full Stack com formação em Técnico em Informática e atualmente cursando Análise e Desenvolvimento de Sistemas. Experiência sólida em desenvolvimento front-end e back-end, com habilidades em linguagens de programação como JavaScript, Python e Java. Foco em criar soluções eficientes e inovadoras.</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Nome: <span class="text-secondary">Emelly Freitas</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Aniversário: <span class="text-secondary">16 de Maio de 2001</span></h6></div>
@@ -155,6 +155,12 @@
                     <div class="border-left border-primary pt-2 pl-4 ml-2">
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
+                            <h5 class="font-weight-bold mb-1">Analista de Desenvolvimento de Sistemas</h5>
+                            <p class="mb-2"><strong>VONIXX</strong> | <small>2023 - Até o momento</small></p>
+                            <p></p>
+                        </div>
+                        <div class="position-relative mb-4">
+                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Desenvolvedora Web - Full Stack</h5>
                             <p class="mb-2"><strong>ÁGILGPR</strong> | <small>2018 - 2019</small></p>
                             <p>Estagiei como desenvolvedora web, criando sistemas MVP's com Ruby on Rails, React, PostgreSQL, HTML, CSS e JavaScript. Aprendi a desenvolver soluções eficientes e escaláveis, aplicando boas práticas de programação e trabalhando em equipe, ampliando meu conhecimento nessas tecnologias.</p>
@@ -162,14 +168,8 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Assistente de Inteligência Comercial</h5>
-                            <p class="mb-2"><strong>UNIATENEU</strong> | <small>2023 - Até o momento</small></p>
+                            <p class="mb-2"><strong>UNIATENEU</strong> | <small>2023/small></p>
                             <p>Criando automações em Python para realizar webscraping e análise de dados. Adquiri habilidades em coletar informações de websites de forma automatizada, processar os dados e extrair insights relevantes. Essa experiência me permitiu aprimorar minha expertise em Python e explorar a área de análise de dados.</p>
-                        </div>
-                        <div class="position-relative mb-4">
-                            <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
-                            <h5 class="font-weight-bold mb-1">Assistente Administrativo</h5>
-                            <p class="mb-2"><strong>CENEGED</strong> | <small>2020 - 2022</small></p>
-                            <p>Atuei como Assistente Administrativo no setor de Segurança do Trabalho, adquirindo experiência na gestão de documentos e processos relacionados à segurança e saúde ocupacional.</p>
                         </div>
                     </div>
                 </div>
