--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     <h3 class="text-white font-weight-normal mb-3">Eu sou</h3>
                     <h1 class="display-3 text-uppercase text-primary mb-2" style="-webkit-text-stroke: 1px #ffffff;">Emelly Freitas</h1>
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
-                    <div class="typed-text d-none">Desenvolvedora Web, Desenvolvedora Front End, Desenvolvedora Back End, Desenvolvedora Full Stack</div>
+                    <div class="typed-text d-none">Desenvolvedora Full Stack, Desenvolvedora Front End, Desenvolvedora Back End</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
                         <a href="https://drive.google.com/file/d/1KsxioC_S1i-QCeAa8fuyW7vs1J2LA2Oa/view?usp=sharing" class="btn btn-outline-light mr-5">Download CV</a>
                         
