--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Analista de Desenvolvimento de Sistemas</h5>
                             <p class="mb-2"><strong>VONIXX</strong> | <small>2023 - Até o momento</small></p>
-                            <p></p>
+                            <p>Como Analista de Desenvolvimento de Sistemas Júnior especializado em Java, tenho desempenhado um papel na otimização e aprimoramento do sistema ERP utilizado pela empresa.</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
@@ -168,7 +168,7 @@
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Assistente de Inteligência Comercial</h5>
-                            <p class="mb-2"><strong>UNIATENEU</strong> | <small>2023/small></p>
+                            <p class="mb-2"><strong>UNIATENEU</strong> | <small>2023</small></p>
                             <p>Criando automações em Python para realizar webscraping e análise de dados. Adquiri habilidades em coletar informações de websites de forma automatizada, processar os dados e extrair insights relevantes. Essa experiência me permitiu aprimorar minha expertise em Python e explorar a área de análise de dados.</p>
                         </div>
                     </div>
