--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 
 <head>
     <meta charset="utf-8">
-    <title>Emelly Freitas - Desenvolvedora Web</title>
+    <title>Emelly Freitas - Desenvolvedora Full Stack</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -101,7 +101,7 @@
                     <img class="img-fluid rounded w-100" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-7">
-                    <h3 class="mb-4">Analista e Desenvolvedora de sistemas</h3>
+                    <h3 class="mb-4">Analista e Desenvolvedora de Sistemas</h3>
                     <p>Desenvolvedora Full Stack com formação em Técnico em Informática e atualmente cursando Análise e Desenvolvimento de Sistemas. Experiência sólida em desenvolvimento front-end e back-end, com habilidades em linguagens de programação como JavaScript, Python e Java. Foco em criar soluções eficientes e inovadoras.</p>
                     <div class="row mb-3">
                         <div class="col-sm-6 py-2"><h6>Nome: <span class="text-secondary">Emelly Freitas</span></h6></div>
