--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
                             <h5 class="font-weight-bold mb-1">Analista de Desenvolvimento de Sistemas</h5>
                             <p class="mb-2"><strong>VONIXX</strong> | <small>2023 - Até o momento</small></p>
-                            <p>Como Analista de Desenvolvimento de Sistemas Júnior especializado em Java, tenho desempenhado um papel na otimização e aprimoramento do sistema ERP utilizado pela empresa.</p>
+                            <p>Como Analista de Desenvolvimento de Sistemas Júnior especializado em Java, tenho desempenhado um papel na otimização e aprimoramento do sistema ERP utilizado pela empresa. Envolvida na criação de eventos automatizados que visam eliminar tarefas manuais, otimizando assim a eficiência operacional dentro do sistema.</p>
                         </div>
                         <div class="position-relative mb-4">
                             <i class="far fa-dot-circle text-primary position-absolute" style="top: 2px; left: -32px;"></i>
