--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                     <h1 class="typed-text-output d-inline font-weight-lighter text-white"></h1>
                     <div class="typed-text d-none">Desenvolvedora Full Stack, Desenvolvedora Front End, Desenvolvedora Back End</div>
                     <div class="d-flex align-items-center justify-content-center justify-content-lg-start pt-5">
-                        <a href="https://drive.google.com/file/d/1KsxioC_S1i-QCeAa8fuyW7vs1J2LA2Oa/view?usp=sharing" class="btn btn-outline-light mr-5">Download CV</a>
+                        <a href="#" class="btn btn-outline-light mr-5">Download CV</a>
                         
                     </div>
                 </div>
